--- a/_i18n/pt-br/_posts/2021-5-20-EKA2L1 0.0.4 released.markdown
+++ b/_i18n/pt-br/_posts/2021-5-20-EKA2L1 0.0.4 released.markdown
@@ -9,7 +9,7 @@ O EKA2L1 foi atualizado para a versão 0.0.4, também está disponível no Googl
 
 ## O método de instalação de dispositivos foi modificado
 
-Houve muitos comentários sobre problemas em saber como se instalar um dispositivo. Por exemplo, na tela inicial do emulador, muitos não sabem quais dispositivos instalar ou qual método utilizar. Muitos usuários abandonam o emulador nessas etapas, pois muitos precisam de algo mais simplificado.
+Houve muitos comentários sobre problemas em saber como se instalar um dispositivo. Por exemplo, na tela inicial do emulador, muitos não sabem quais dispositivos instalar ou qual método utilizar. Dessa maneira, muitos usuários abandonam o emulador nessas etapas, pois muitos precisam de algo mais simplificado.
 
 Como resultado, ajustamos o processo de instalação dos dispositivos. Observe que isso não pode ser desativado.
 
@@ -31,15 +31,15 @@ Aqui estão as imagens da nova tela de instalação:
 	<figcaption>Tela de instalação no PC</figcaption>
 </figure>
 
-Quando for detectado que a ROM inserida não é S60v1, um campo para inserir o RPKG será ativado. Obrigado aos usuários na Play Store e do Discord pelos incríveis feedbacks, isso ajudou bastante na solução deste problema.
+Quando for detectado que a ROM inserida não é S60v1, um campo para inserir o RPKG será exibido. Obrigado aos usuários na Play Store e do Discord pelos incríveis feedbacks, isso ajudou bastante na solução deste problema.
 
 ## O Suporte ao S60v2 foi adicionado
 
-Isso foi pedido por muitos usuários. implementamos algumas partes dos sistemas S60v2, infelizmente não todos, e muitos aplicativos e jogos ainda estão com muitos bugs ou nem mesmo abrem. No entanto, a compatibilidade melhorou.
+Isso foi pedido por muitos usuários. implementamos algumas partes dos sistemas S60v2, infelizmente não todos, muitos aplicativos e jogos ainda estão com muitos bugs ou nem mesmo abrem. No entanto, a compatibilidade melhorou.
 
 O S60v2 tem três pacotes de recursos, nos quais estão os estágios de transição dos dias de EPOC legado. Isso inclui tentar remover a estrutura semelhante a uma pasta do sistema, remover a pesquisa de DLL semelhante ao do Windows, remover a aprovação e modificar funções das ROMs, como a resolução da tela que é codificada dentro dos cabeçalhos da ROM. Sendo assim, implementar o S60v2 está sendo uma tarefa bem divertida.
 
-A compactação de DLLs e EXEs PETRAN também está presente em muitas aplicações. Algumas funções que ainda não estão funcionando corretamente, incluindo jogos que usam Direct Screen Access (DSA) propriamente.
+A compactação de DLLs e EXEs PETRAN também está presente em muitos aplicativos. Algumas funções que ainda não estão funcionando corretamente, incluindo jogos que usam o Direct Screen Access (DSA) propriamente.
 
 Aqui estão algumas capturas de tela de jogos que atualmente estão em funcionamento no emulador, usando um dump do dispositivo N70.
 
@@ -59,23 +59,23 @@ Aqui estão algumas capturas de tela de jogos que atualmente estão em funcionam
 
 ## Adicionando suporte ao S60v5 em dispositivos de 32 bits
 
-S60v5 e S^3 requerem operações VFP pesadas, então eles não foram implementados no emulador JIT de 32 bits antes. Recentemente, tocamos nesta seção novamente, já que o host não usa registros VFP, então descartamos todo o banco registros, mas ainda mantemos o controle de quais registros estão sendo carregados/escritos.
+S60v5 e S^3 requerem operações VFP pesadas, então eles não foram implementados no emulador JIT de 32 bits antes. Recentemente, tocamos nesta seção novamente, já que o host não usa registros VFP, então descartamos todo o banco de registros, mas ainda mantemos o controle de quais registros estão sendo carregados/escritos.
 
 O desempenho obtido no JIT de 32 bits é na verdade o mesmo que você obteria em um telefone Symbian real. Não achamos que haja grandes expectativas para amadores como nós... Mas esperamos que você possa aproveitar os velhos tempos em dispositivos Android atuais. Não há muito o que falar sobre isso.
 
 ## Outros pequenos ajustes
 
-Anteriormente não havia dumps de dispositivos Unicode, mas recentemente nos foi fornecido uma ROM de um N70 chinês, e ele não funciona muito bem, pelo fato de não mostra nada para ler na tela. Estamos trabalhando nisso, tentamos carregar caracteres Unicode, mas sem armazenar nenhuma informação de coordenadas no atlas. Corrigir esse problema fez um cara conseguir jogar Pocket Kingdom em chinês, (Risos).
+Anteriormente não havia dumps de dispositivos Unicode, mas recentemente nos foi fornecido a ROM de um N70 chinês, ele não funciona muito bem, pelo fato de não mostra nada para ler na tela. Estamos trabalhando nisso, tentamos carregar caracteres Unicode, mas sem armazenar nenhuma informação de coordenadas no atlas. Corrigir esse problema fez um cara conseguir jogar Pocket Kingdom em chinês, (Risos).
 
 <figure class="half">
 	<img src="https://cdn.discordapp.com/attachments/703563521379663883/841236525442400256/Screenshot_20210510_165245_com.github.eka2l1.jpg">
 	<img src="https://cdn.discordapp.com/attachments/703563521379663883/841206165320237126/unknown.png">
-	<figcaption>A história parece que já pode ser exibida na tela agora, então você também pode jogar Card Decks</figcaption>
+	<figcaption>Agora a história parece que pode ser exibida na tela, então você também pode jogar Card Decks</figcaption>
 </figure>
 
-Outros pedidos, incluem alguns jogos que não podem ler o IMEI do emulador. Este IMEI é gerado online aleatoriamente, (Risos). Mas não deve haver nada de errado com isso.
+Outros pedidos, incluem alguns jogos que não podem ler o IMEI do emulador. Este IMEI é gerado online aleatoriamente, (Risos). Mas, não deve haver nada de errado com isso.
 
-Para obter o IMEI, os jogos devem obter as informações do telefone usando uma API, que exige que você digite o nome do getter (Captador) de informações do telefone (criado a partir de uma DLL). Mas alguns jogos mais antigos às vezes codificavam o nome do getter de informações como "Calypso" para S60v1 (este é o codinome para Nokia 7650) ou como "DefaultPhone" para S60v2. Não carregamos esses módulos por motivos óbvios, ou seja, para obter coisas do driver. Portanto, temos que falsificar esses nomes, dependendo da versão do sistema operacional...
+Para obter o IMEI, os jogos devem obter as informações do telefone usando uma API, que exige que você digite o nome do getter (Captador) de informações do telefone (criado a partir de uma DLL). Mas alguns jogos mais antigos às vezes codificavam o nome do getter de informações como "Calypso" para o S60v1 (este é o codinome para Nokia 7650) ou como "DefaultPhone" para S60v2. Não carregamos esses módulos por motivos óbvios, ou seja, para obter coisas do driver. Portanto, temos que falsificar esses nomes, dependendo da versão do sistema operacional...
   
 <figure class="half">
 	<img src="https://cdn.discordapp.com/attachments/703563521379663883/837025442631516170/111.png">
@@ -83,7 +83,7 @@ Para obter o IMEI, os jogos devem obter as informações do telefone usando uma 
 	<figcaption>Agora você pode jogar Legacy... E ler IMEI do X-plore também funciona</figcaption>
 </figure>
   
-A última coisa a mencionar é que, alguns jogos possuem algumas condições de corrida, que nem mesmo ativam devido à forma como o SO os programa os threads. Depois que um thread é criado e reiniciado, o kernel o redefine imediatamente, o que pode fazer com que os threads filhos sejam executados primeiro. Isso cria algumas situações em que o thread pai acessa informações do thread filho que só é criado quando o threads filho é executado primeiro. O emulador foi corrigido para seguir esse comportamento, o que resolve travamentos em alguns jogos. (Parece meio confuso, mas isso vai melhorar o desempenho de alguns jogos)
+A última coisa a mencionar é que, alguns jogos possuem algumas condições de corrida, que nem mesmo ativam devido à forma como o SO programa os threads. Depois que um thread é criado e reiniciado, o kernel o redefine imediatamente, o que pode fazer com que os threads filhos sejam executados primeiro. Isso cria algumas situações em que o thread pai acessa informações do thread filho que só é criado quando o threads filho é executado primeiro. O emulador foi corrigido para seguir esse comportamento, o que resolve travamentos em alguns jogos. (Parece meio confuso, mas isso vai melhorar o desempenho de alguns jogos)
 
 <figure class="half">
 	<img src="https://cdn.discordapp.com/attachments/703563521379663883/840313459240992808/Screenshot_20210508-023938077.jpg">
@@ -95,7 +95,7 @@ Também houveram algumas pequenas correções que melhoram a compatibilidade com
   
 ## Objetivos para a versão 0.0.5
   
-Esperamos implementar suporte para o serviço N-Gage (geralmente chamado de N-Gage 2.0) em breve. O trabalho já foi feito no branch ng2 antes, mas é um trabalho bastante preliminar e apenas funciona com um jogo, e isso é só mencionando a instalação dele.
+Esperamos implementar o suporte para o serviço N-Gage (geralmente chamado de N-Gage 2.0) em breve. O trabalho já foi feito no branch ng2 antes, mas é um trabalho bastante preliminar e apenas funciona com um jogo, e isso é só mencionando a instalação dele.
 
 ![image](https://user-images.githubusercontent.com/25717050/118920571-de268f00-b960-11eb-8f52-87cb082dc09c.png)
   
