Update RU translation

--- a/_i18n/ru/_posts/2021-5-20-EKA2L1 0.0.4 released.markdown
+++ b/_i18n/ru/_posts/2021-5-20-EKA2L1 0.0.4 released.markdown
@@ -9,11 +9,11 @@ EKA2L1 обновлен до версии 0.0.4.
 
 ## Коррректировка способов установки устройства
 
-Нам было получено множество отзывов о проблемах при использовании эмулятора. Например, если смотреть на экран установки, какое устройство следует установить, каким методом его установить. Многие пользователи останавливаются на этих шагах.
+Нами было получено множество отзывов о проблемах при использовании эмулятора. Например, если смотреть на экран установки, какое устройство следует установить, каким методом его установить. Многие пользователи останавливаются на этих шагах.
 
 По результатам мы скорректировали процесс установки устройства. Учтите, что его вообще нельзя удалить.
 
-- **Мы знаем, что многие люди - любители консолей, а не Symbian, поэтому для них наличие двух файлов или чего-то вроде сырого дампа может быть небольшой проблемой. Таким образом, для устройств **S60v1**, таких как *N-Gage*, вам для установки теперь **требуется только** предоставить **системные ROMы**. Мы надеемся, что это упростит процесс установки.
+- Мы знаем, что многие люди - любители консолей, а не Symbian, поэтому для них наличие двух файлов или чего-то вроде сырого дампа может быть небольшой проблемой. Таким образом, для устройств **S60v1**, таких как *N-Gage*, вам для установки теперь **требуется только** предоставить **системные ROMы**. Мы надеемся, что это упростит процесс установки.
 
 - Для устройств S60v2 используется процесс обработки, который также включает в себя ROFS в ваших системах, поэтому для него по-прежнему необходимо использовать RPKG.
 - Для устройств S60v3, S60v5 и S^3 мы предоставили вам возможность **установки с помощью прошивок**, что гораздо проще для большинства пользователей. Вам нужно всего лишь **указать путь к файлу VPL** для установки. *Обратите внимание*, что этот способ не работает с некоторыми поздними прошивками S60v2 из-за различий в позиционировании данных ROM.
