--- a/_i18n/es/_posts/2021-5-20-EKA2L1 0.0.4 released.markdown
+++ b/_i18n/es/_posts/2021-5-20-EKA2L1 0.0.4 released.markdown
@@ -3,6 +3,7 @@ layout: single
 title:  "¡Versión 0.0.4 de EKA2L1 publicada!"
 date:   2021-05-20 9:00:00 +0700
 categories: update android playstore
+toc: true
 ---
 
 EKA2L1 ha alcanzado la versión 0.0.4 y ha sido actualizada en Google Play Store. 
