--- a/_i18n/pt-br/_posts/2021-5-20-EKA2L1 0.0.4 released.markdown
+++ b/_i18n/pt-br/_posts/2021-5-20-EKA2L1 0.0.4 released.markdown
@@ -3,6 +3,7 @@ layout: single
 title:  "EKA2L1 atualizado para a versão 0.0.4!"
 date:   2021-05-20 9:00:00 +0700
 categories: update android playstore
+toc: true
 ---
 
 O EKA2L1 foi atualizado para a versão 0.0.4, também está disponível no Google Play Store.
