--- a/_i18n/ru/_posts/2021-5-20-EKA2L1 0.0.4 released.markdown
+++ b/_i18n/ru/_posts/2021-5-20-EKA2L1 0.0.4 released.markdown
@@ -3,6 +3,7 @@ layout: single
 title:  "Выпущена версия EKA2L1 0.0.4!"
 date:   2021-05-20 9:00:00 +0700
 categories: update android playstore
+toc: true
 ---
 
 EKA2L1 обновлен до версии 0.0.4.
